# TheLime1-shatter

./: README.md  pyproject.toml
.github/: pull_request_template.md
shatter/: __init__.py  __main__.py  cli.py  scanner.py  targets.py
