[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shatter"
version = "0.1.0"
description = "🔨 Recursively find and obliterate build caches & dependency bloat."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
shatter = "shatter.cli:app"

[tool.setuptools.packages.find]
include = ["shatter*"]
